# arxivist

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  main_old.rs
Legacy/: .gitignore  README.md
Legacy/indexer/src/: handle_db.rs
Legacy/queryengine/src/: lib.rs  main.rs
Legacy/tui/: LICENSE
Legacy/tui/src/: app.rs  ui.rs
Legacy/webcrawler/: Cargo.toml  README.md
Legacy/webcrawler/src/: crawl.rs  handle_db.rs  main.rs
crates/arxivist-core/: Cargo.toml
crates/arxivist-core/src/: lib.rs
crates/arxivist-crawler/: Cargo.toml
crates/arxivist-crawler/src/: args.rs  aws_runner.rs  extract.rs  filters.rs  main.rs  record.rs  runner.rs  spider_client.rs  types.rs
crates/arxivist-indexer/: Cargo.toml
crates/arxivist-indexer/src/: aws_indexer.rs  index.rs  main.rs  pagerank.rs  records.rs
crates/arxivist-search-api/: Cargo.toml
crates/arxivist-search-api/src/: main.rs
crawler/: .env.example  Cargo.toml  Dockerfile  README.md
crawler/src/: api.rs  aws.rs  config.rs  crawl.rs  extract.rs  ids.rs  lib.rs  main.rs  models.rs  service.rs  storage.rs
docs/: architecture.md
frontend/: build-config.mjs  package.json
frontend/api/: [...path].js
frontend/src/: app.js  index.html  styles.css
indexer/: .env.example  Cargo.toml  Dockerfile  README.md
indexer/src/: api.rs  aws.rs  config.rs  extract.rs  handle_db.rs  ids.rs  language.rs  lib.rs  main.rs  models.rs  pagerank.rs  service.rs  storage.rs  tantivy_index.rs
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: arxivist-demo-stack.d.ts  arxivist-demo-stack.js  arxivist-demo-stack.ts
queryengine/: Cargo.toml
queryengine/src/: main.rs
tui/: Cargo.toml  README.md
tui/src/: app.rs  main.rs  ui.rs
webcrawler/: Cargo.toml  crawler.db
webcrawler/src/: arxiv_scrape.rs  crawl.rs  main.rs
