[workspace]
members = [
    "crates/arxivist-core",
    "crates/arxivist-crawler",
    "crates/arxivist-indexer",
    "crates/arxivist-search-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "json"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spider = "2.52.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
