[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]

sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-channel = "2.5.0"
unicode-segmentation = "1.13.2"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
