[package]
name = "tui"
version = "0.1.0"
description = "A simple cli for Arxivist"
authors = ["LunarSphere <supermax309@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
queryengine = {path = "../queryengine"}
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
serde = "1.0.228"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0.102"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
