[package]
name = "webcrawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli"] }
scraper = "0.20"
url = "2"
governor = "0.6"          # rate limiting
dashmap = "6"             # concurrent hashmap
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
anyhow = "1"
select = "0.6.1"
rand = "0.8.0"
async-channel = "2.5.0"
