[package]
name = "arxivist-crawler"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
arxivist-core = { path = "../arxivist-core" }
clap.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde_json.workspace = true
spider.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
