[package]
name = "arxivist-indexer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
arxivist-core = { path = "../arxivist-core" }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
