[package]
name = "arxivist-indexer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
arxivist-core = { path = "../arxivist-core" }
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
